src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* ---- Base Layer ---- */
@layer base {
    body {
        @apply text-slate-300;
    }
}

/* ---- Components Layer ---- */
@layer components {
    .btn {
        @apply px-4 py-2 rounded-lg font-semibold transition-colors;
    }

    .card-head {
        @apply font-bold capitalize text-xl mb-4
    }

    .card-desc {
        @apply text-center
    }

    .fylo-container {
        @apply w-full max-w-[1206px] m-auto px-6 py-4 lg:px-20
    }
}

/* ---- Utilities Layer ---- */
@layer utilities {
    .content-auto {
        content-visibility: auto;
    }
}

